--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   comment:
     runs-on: ubuntu-latest
-
+    env:
+      name: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
