ci:update reviewer
Signed-off-by: joohwan <piwriw@163.com>

--- a/.github/workflows/reviewers.yml
+++ b/.github/workflows/reviewers.yml
@@ -1,8 +1,7 @@
 # .github/reviewers.yml
-
 groups:
   # 定义评审组
-  frontend:
+  maintainers:  # 维护者组:
     reviewers:  # 个人评审者列表
       - piwriw
 
@@ -11,5 +10,5 @@ rules:
   # 定义路径匹配规则
   - paths:
       - "**"  # 通配符匹配
-    groups: [frontend]     # 应用的评审组
+    groups: [maintainers]     # 应用的评审组
     required: 1         # 需要的最少评审人数
