ci:update Auto Merge PR
Signed-off-by: joohwan <piwriw@163.com>

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -14,6 +14,8 @@ on:
       - completed
   status: { }
 jobs:
+  env:
+    name: production
   automerge:
     runs-on: ubuntu-latest
     permissions:
