--- a/.github/workflows/auto-comment-pr.yml
+++ b/.github/workflows/auto-comment-pr.yml
@@ -2,7 +2,7 @@ name: Auto Comment on PR
 
 on:
   pull_request_target:
-    types: [ opened, synchronize ]
+    types: [ opened ]
     branches: [ main ]
 
 jobs:
