--- a/.github/workflows/dco.yml
+++ b/.github/workflows/dco.yml
@@ -8,6 +8,8 @@ jobs:
   check_dco:
     runs-on: ubuntu-latest
     name: Check DCO
+    env:
+      name: production
     steps:
       - name: Run dco-check
         uses: christophebedard/dco-check@0.5.0
